// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextField > should match snapshot when disabled 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col undefined"
  >
    <div
      data-testid="mui-textfield-root"
    >
      <input
        data-error="false"
        data-multiline="false"
        data-testid="input"
        disabled=""
        value="initial value"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextField > should match snapshot with default props (error hidden) 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col undefined"
  >
    <span
      class="text-xs text-[#49454F]"
    >
      Test Label
    </span>
    <div
      data-testid="mui-textfield-root"
    >
      <input
        data-error="false"
        data-multiline="false"
        data-testid="input"
        value="initial value"
      />
    </div>
  </div>
</DocumentFragment>
`;
